k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conexao-solidaria-ingress
  namespace: conexao-solidaria
spec:
  ingressClassName: nginx
  rules:
    - host: api.conexaosolidaria.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conexao-solidaria-api
                port:
                  number: 80
    - host: grafana.conexaosolidaria.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: rabbitmq.conexaosolidaria.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-management
                port:
                  number: 15672
